Fix code blocks on mobile

--- a/assets/index.css
+++ b/assets/index.css
@@ -163,7 +163,7 @@
 
   code,
   pre code {
-    @apply bg-gray-50 border border-gray-200 break-words py-1 px-2 rounded text-sm;
+    @apply bg-gray-50 border border-gray-200 break-words overflow-y-auto py-1 px-2 rounded text-sm max-w-full;
     box-decoration-break: clone;
   }
 
